[package]
name = "ssh-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"
dirs = "5.0"
tabled = "0.15"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
rpassword = "7.0"
ssh2 = "0.9"
crossterm = "0.27"
